Add homepage URL to package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://giri-shankar.github.io/Cloud-Storage-Sensify-/",
   "name": "gemini-cloud-storage",
   "private": true,
   "version": "0.0.0",
